# Pilar-KI-Kurs

./: README.md  index.html  pyproject.toml  script.js  style.css
examples/: generated_risikomatrix.csv  sample_product_info.md
output/: risikoakte.md
src/risk_akte_tool/: cli.py  exporter.py  extractor.py  models.py  parser.py  risk_engine.py  template_generator.py
tests/: test_extractor.py  test_risk_engine.py  test_template.py
