[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "risk-akte-tool"
version = "0.1.0"
description = "MVP zur automatischen Generierung einer Risikoakte für Elektromedizinprodukte"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
pdf = ["pypdf>=4.0.0"]

[project.scripts]
risk-akte = "risk_akte_tool.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
